[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
derive_more = "0.99.17"
inventory = "0.3.2"
itertools = "0.10.5"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
num = "0.4.1"
once_cell = "1.18.0"
openblas-src = { version = "0.10.8", features = ["static"] }
regex = "1.10.2"
sscanf = "0.4.1"
thiserror = "1.0.50"
